# oldy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  main.py  oldy.iss  pyproject.toml  requirements.txt
.claude/: settings.local.json
oldy/: cli.py  config.py  hardware.py  log.py  models.py  monitor.py  ollama_manager.py  proxy.py  tunnel.py
