[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oldy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.0",
    "rich==13.7.1",
    "psutil==5.9.8",
    "httpx==0.27.0",
    "questionary==2.0.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.scripts]
oldy = "oldy.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["oldy*"]
